@@ -1,5 +1,7 @@
 CVS - Eric Kidd <eric.kidd@pobox.com> - Ongoing
 
+  * Basic UTF-8 handling: Refuse to process invalid UTF-8 from network,
+    print warnings when sending invalid UTF-8 *to* network.
   * Highly robust UTF-8 validator, decoder, encoder.
   * RedHat 7 warning fixes.
   * Modularized the build system--build only what you need.
